--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@google/earthengine": "^0.1.391",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "googleapis": "^133.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
